# Corange

./: .gitattributes  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENCE.md  LICENCE.txt  Makefile  README.md  README.txt  TODO  TODO.md  TODO.txt  corange.c  corange.rc  corange.res  demo_screen_normal.bat  demo_water.bat  demo_wolf.bat  painting_demo.bat  sample_area.tga  splint.sh
demos/: CMakeLists.txt
demos/cello/: Makefile  libcorange.
demos/cello/include/: cello.h
demos/cello/src/: cello.c
demos/cubemap/: Makefile  cubemap  cubemap.c
demos/cubemap/assets/: box.mat  cubemap.fs  cubemap.mat  cubemap.vs  cubetable512.dds  readme.md
demos/light/: Makefile  light  light.c
demos/light/assets/: graphics.cfg  readme.md
demos/lut_gen/: .gitignore  CMakeLists.txt  Makefile  lut_gen
demos/lut_gen/data/: emerald.acv  emerald.lut
demos/lut_gen/include/: lut_gen.h  lut_gen_ui.h  spline.h
demos/lut_gen/input/: test2.acv
demos/lut_gen/output/: bluey.lut  funky.lut  identity.lut  test.lut
demos/lut_gen/screenshots/: corange_110112201712.tga  shot1.dds
demos/lut_gen/shaders/: basic_lut.fs  basic_lut.prog
demos/lut_gen/src/: lut_gen.c  lut_gen_ui.c  spline.c
demos/metaballs/: .gitignore  CMakeLists.txt  Makefile  metaballs
demos/metaballs/include/: kernel.h  marching_cubes.h  metaballs.h  particles.h  volume_renderer.h
demos/metaballs/kernels/: lookup_table.cl  marching_cubes.cl  matrix.cl  particles.cl  volume.cl  volume_blitting.cl  volume_rendering.cl
demos/metaballs/shaders/: metaballs.fs  metaballs.mat  metaballs.prog  metaballs.vs  metaballs_def.fs  metaballs_def.mat  metaballs_def.prog  metaballs_def.vs
demos/metaballs/src/: kernel.c  marching_cubes.c  metaballs.c  particles.c  volume_renderer.c
demos/noise/: .gitignore  CMakeLists.txt  Makefile  corange_100112193125.tga  noise  noise.c  noise.mat  noise.tga  perlin_noise.tga
demos/noise/include/: noise.h  perlin_noise.h
demos/noise/shaders/: noise.fs  noise.mat  noise.prog  noise.vs
demos/noise/src/: noise.c  perlin_noise.c
demos/parallax/: Makefile  parallax  parallax.c
demos/parallax/assets/: box.bmf  box.mat  diffuse.tga  normal.tga  parallax.fs  parallax.mat  parallax.tga  parallax.vs  specular.tga
demos/particles/: Makefile  particles  particles.c
demos/physics/: Makefile  graphics.cfg  physics  physics.c
demos/platformer/: .gitignore  CMakeLists.txt  Makefile  platformer
demos/platformer/backgrounds/: bluesky.dds
demos/platformer/include/: character.h  coin.h  level.h  platformer.h  tile_level.h  tile_renderer.h
demos/platformer/levels/: demo.level
demos/platformer/src/: character.c  coin.c  level.c  platformer.c  tile_level.c
demos/platformer/tiles/: character.dds  character_flap.dds  coin.dds  tile_dirt.dds  tile_dirt_overhang.dds  tile_dirt_rock.dds  tile_grass.dds  tile_grass_rock1.dds  tile_grass_rock2.dds  tile_grass_tree.dds  tile_house_bot_left.dds  tile_house_bot_right.dds  tile_house_top_left.dds  tile_house_top_right.dds  tile_sky.dds  tile_surface.dds  tile_tree.dds  tile_tree_bot_left.dds  tile_tree_bot_right.dds  tile_tree_junc_left.dds  tile_tree_junc_right.dds  tile_tree_side.dds  tile_tree_top.dds  tile_tree_top_left.dds  tile_tree_top_right.dds  tile_tree_topest.dds  tile_tree_turn_left.dds  tile_tree_turn_right.dds
demos/renderers/: CMakeLists.txt  Makefile  renderers  renderers.c  valgrind.supp
demos/renderers/assets/: graphics.cfg
demos/renderers/include/: renderers.h
demos/renderers/renderers/: Makefile  cmake_install.cmake
demos/renderers/src/: renderers.c
demos/rendering/: .gitignore  CMakeLists.txt  Makefile  rendering.c
demos/rendering/assets/: graphics.cfg
demos/scotland/: .gitignore  CMakeLists.txt  Makefile  scotland  scotland.c
demos/scotland/assets/: graphics.cfg
demos/scotland/include/: scotland.h  vegetation.h
demos/scotland/src/: scotland.c  vegetation.c
demos/sea/: .gitignore  CMakeLists.txt  Makefile  sea  sea.c
demos/sea/assets/: graphics.cfg  water_calm.dds
demos/sea/include/: sea.h
demos/sea/resources/: noise2.dds  noise4.dds  noise5.dds  seaplane.fs  seaplane.mat  seaplane.prog  seaplane.vs  skybox_cloud_01.dds  skybox_cloud_10.dds  skybox_cloud_13.dds  skydome.mat  water_foam.dds
demos/sea/src/: sea.c
demos/teapot/: .gitignore  CMakeLists.txt  Makefile  teapot  teapot.c  teapot.h
demos/teapot/assets/: bunny.bmf  diffuse.dds  normals.dds  specular.dds  teapot.bmf  teapot.fs  teapot.mat  teapot.vs
demos/tessellation/: .gitignore  CMakeLists.txt  Makefile  tessellation  tessellation.c  tessellation.fs  tessellation.mat  tessellation.tes  tessellation.vs
demos/tessellation/include/: tessellation.h
demos/tessellation/shaders/: tessellation.gs  tessellation.mat  tessellation.prog  tessellation.tcs
demos/tessellation/src/: tessellation.c
demos/ui/: Makefile  graphics.cfg  ui  ui.c
demos/wolf/: Makefile
demos/wolf/include/: brush_dict.h  wolf_renderable.h  wolf_renderer.h
demos/wolf/ref/: brush_dict.psd
demos/wolf/resources/: brush3.dds
engine/: CMakeLists.txt
engine/fonts/: console_font_0.dds
engine/include/: cengine.h  centity.h  corange.h
engine/kernels/: test.cl  vector_add.cl
engine/resources/: basic.mat  basic_animated.mat  brush.dds  brush2.dds  brush3.dds  brush4.dds  brush_round.dds  brushset1.dds  paperback.dds  random.dds
engine/scripts/: hello_world.lua
engine/shaders/: basic.fs  basic.prog  basic.vs  basic_animated.fs  basic_animated.prog  basic_animated.vs  blending.glsl  colors.fs  deferred.fs  deferred.prog  deferred.vs  deferred_animated.prog  deferred_animated.vs  deferred_screen.fs  deferred_screen.prog  deferred_tonemap.fs  deferred_tonemap.prog  depth.fs  depth.prog  depth.vs  depth_animated.prog  multiply.fs  norm_spec_env.fs  norm_spec_env.prog  norm_spec_env_animated.prog  norm_spec_env_animated.vs  normal_spec.prog  normal_spec.vs  painting.fs  painting.prog  painting.vs  painting_high.fs  painting_high.prog  painting_high.vs  screen_ao.fs  shadows.fs  test1.vs  test2.fs  test3.fs
engine/src/: casset.c  centity.c  cgraphics.c  cui.c
(+1090 files in other folders)
